--- a/Year 2 Spring/COMP2121/Assignments/268218-2121-5.tex
+++ b/Year 2 Spring/COMP2121/Assignments/268218-2121-5.tex
@@ -38,9 +38,9 @@
     \item
           \begin{enumerate}[label=(\roman*)]
               \item  Consider the condition $\{a,b\} \in E(G)\ iff\ a+b\ odd$. $a=1$ is connected to all $b$ such that $b$ is even up till $20$. Then, $a=2$ is connected to all $b$ such that $b$ is odd up till $19$. As $a=1$ is connected to $b=2$, $a=1$ is connected to all even numbers and $b$ is connected to all odd numbers, thus, the graph is connected.
-                    w              \item A bipartite graph is a graph that can be divided into two sets of nodes, called a bipartition $(V_1, V_2)$, such that no two nodes in the same set are connected. In this case, $V_1$ is the set of odd numbers and $V_2$ is the set of even numbers. The condition $\{a,b\} \in E(G)\ iff\ a+b\ odd$ implies that $a$ and $b$ are in different sets. Thus, the graph is bipartite.
-              \item If all nodes have an even degree, then the graph has an Euler cycle. As each odd node is connected to all even nodes, and each even node is connected to all odd nodes, each node has a degree of $10$, which is even. Thus, the graph has an Euler cycle.
-              \item Note the graph is a simple, \textbf{complete} bipartite graph. We know that a complete bipartite graph $K_{m,n}$ has a Hamiltonian cycle if and only if $m=n$. In this case, $m=10$ and $n=10$, thus the graph has a Hamiltonian cycle.
+              \item A bipartite graph is a graph that can be divided into two sets of nodes, called a bipartition $(V_1, V_2)$, such that no two nodes in the same set are connected. In this case, $V_1$ is the set of odd numbers and $V_2$ is the set of even numbers. The condition $\{a,b\} \in E(G)\ iff\ a+b\ odd$ implies that $a$ and $b$ are in different sets. Thus, the graph is bipartite.
+              \item If all nodes have an even degree, then the graph has an Euler cycle. As each odd node is connected to all even nodes, and each even node is connected to all odd nodes, each node has a degree of $10$, which is even. Thus, the graph has an Euler cycle. As all degrees are even, there is no Eular path.
+              \item Note the graph is a simple, \textbf{complete} bipartite graph. We know that a complete bipartite graph $K_{m,n}$ has a Hamiltonian cycle if and only if $m=n$. In this case, $m=10$ and $n=10$, thus the graph has a Hamiltonian cycle. (and thus a path)
           \end{enumerate}
     \item Using the handshaking theorem $2|E|=\sum_{v\in V}deg(v)$. As $G$ is regular, thus, $44=|V|*d, |V| \leq 22, d \leq |V| - 1$ (connected, simple). The candidate values are:
           \begin{itemize}
@@ -86,7 +86,7 @@
 
           Hence, by coloring number of time slots needed is 3.
 
-    \item Prove by contradiction. Assume that there exists a vertex $v$ in $G$ such that $deg(v) < k-1$. Then, we can remove the edges incident to $v$ and the chromatic number of the resulting graph will be at most $k-1$, which contradicts the assumption that $G$ is chromatically $k$-critical. !!!
+    \item Given $\chi(G)=k,\quad \chi(G-e) = k-1 \forall e \in E$, we have to proof that $deg(v) \geq k-1$ for all $v \in V$. Assume the contrary, that is, there exists a vertex $v$ such that $deg(v) < k-1$. Removing this vertex can lead to $\chi(G-v) \leq k-1$ colors. We know that the excessive coloring of neighbors of $v$ must be at most $deg(v) < k-1$, that is $k-2$. So adding the node $v$ back gives $\chi(G) \leq k-1$, contradicting the $chi(G)=k$ condition. Hence, $deg(v) \geq k-1$ for all $v \in V$.
     \item We can solve this problem using Euler's formula.
           \begin{itemize}
               \item As each face is a triangle and each edge is shared by two faces, $|R| = \frac23 |E|$.
@@ -152,16 +152,26 @@
 \begin{enumerate}[label=(\alph*)]
     \item A key property is that for a string of $k$ bits, there are $2^k$ possible strings. Define the directed pseudograph $G$ as follows:
           \begin{itemize}
-              \item Each vertex is a $k$-bit string.
-              \item An edge exists if for pairs of nodes $(u,v)$, the last $k-1$ bits of $u$ is the same as the first $k-1$ bits of $v$. (\textit{For example, for $k=3$, the edge $(010), (101)$ is a directed edge.})
+              \item Each vertex is one of the $k-1$-bit strings. (total $2^{k-1}$ vertices)
+              \item An edge exists if for pairs of nodes $(u,v)$, the first bit of $v$ is the same as the last bit of $u$. (total $2^k$ edges)
           \end{itemize}
-          Notice that each node has $2$ edges (in-degree + out-degree), because we are checking the first and last $k-1$ bits. We can also see that the graph is strongly connected, because each time we traverse an edge, we are effectively adding a bit (that can be 0 or 1) to the previous string. Hence, we can traverse all edges in the graph and return to the starting node. Thus, we can find an Euler circuit in the graph, which represents the sequence of $k$-bit strings that Landau is looking for.
+          Notice that for each node, the in-degree is 2 and the out-degree is 2, because we can add a 0 or a 1 to the end of the string. Hence, the graph has an Euler Circuit (all nodes have same in and out degree). The circuit can be read off as the required string.
+
+          Example $k=3$ graph:
+
+          \includegraphics[width=0.3\textwidth]{5-3-a.png}
     \item
-          \begin{enumerate}
+          \begin{enumerate}[label=(\roman*)]
               \item $deg(u)+deg(v)< n$ (Goal is to fail the ore's theorem's condition)
               \item By the above condition, the maximum number to be removed is at most $n-1$. Hence, lower bound on number of edges remaining is $m+1 - (n-1) = m - n + 2$.
-              \item ..
-              \item ..
+              \item Removing two nodes: $|V|=n-2$. We can find the possible number of edges by $\binom{n-2}{2}$. Hence:
+                    \begin{align*}
+                        m - n + 2 & \leq \binom{n-2}{2}       \\
+                        m - n + 2 & \leq \frac{(n-2)(n-3)}{2} \\
+                        m         & \leq \frac{(n-1)(n-2)}{2} \\
+                    \end{align*}
+                    Hence, the maximum value we will use is $m=\frac{(n-1)(n-2)}{2}$.
+              \item We can show that our $m$ is optimal by using a complete $K$ graph. As the number of edges in $K_k$ is $\frac{k(k-1)}{2}$, we want $m=\frac{(k-1)(k-2)}{2} \implies k = n-1$. For a $K_{n-1}$ graph, there are $m$ edges, and $n-1$ vertices. This means that if we add a final node $n_0$ to the graph, it is not connected to the rest of the graph, thus the graph with $m$ edges and $n$ vertices has no Hamiltonian cycle.
           \end{enumerate}
 \end{enumerate}
 \section*{Question 4}
@@ -179,7 +189,7 @@
 \subsection*{Solutions to question 4}
 
 \begin{enumerate}[label=(\alph*)]
-    \item Given each vertex has degree k, $G=K_{k,k}$. The theorem states that if $|N(W)| \geq |W|$ for all $W \subseteq V_1$, then there exists a perfect matching. As $G$ is bipartite, $|N(W)| = k|W|$. Thus, $k|W| \geq |W|$, and so therefore $G$ has a perfect matching.
+    \item Given each vertex has degree k, $G=K_{k,k}$. The theorem states that if $|N(W)| \geq |W|$ for all $W \subseteq V_1$, then there exists a perfect matching. As $G$ is bipartite, $|N(W)| = k|W|$. Thus, $k|W| \geq |W| \implies |N(W)| \geq |W|$, and so therefore $G$ has a perfect matching.
     \item The following pairs are illegal: $(1,2), (1,3), (2,3), (2,4), (3,4), (3,5), (4,5), (4,6), (5,6), (5,7)$. First, draw graph with these edges:
 
           \includegraphics[width=0.5\textwidth]{5-4-b.png}
